--- a/animationpractice.html
+++ b/animationpractice.html
@@ -4,7 +4,7 @@
 
 		<meta charset="UTF-8">
 
-		<link rel="stylesheet" href="css/animationpractice.css" />
+		<link rel="stylesheet" href="animationpractice.css" />
 		
 		<title>CSS Animation Practice</title>
 
